Reorganizes some helpers that provide information about the least common scale and time step.
Sets the least common time step in the Project and exposes the desired time scale of the output.

Refs #58715

Sets the time scale information for a NWM gridded source to missing by default (with UNKNOWN function).

Sets the time scale information for a Datacard source to missing by default (with UNKNOWN function).

Refs #55216